apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:latest
        resources:
          requests:
            cpu: 10m
            memory: 150Mi
          limits:
            cpu: 200m
            memory: 350Mi
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/settings.yaml
          subPath: settings.yaml
        - name: config-volume
          mountPath: /app/config/services.yaml
          subPath: services.yaml
        - name: config-volume
          mountPath: /app/config/bookmarks.yaml
          subPath: bookmarks.yaml
        - name: config-volume
          mountPath: /app/config/widgets.yaml
          subPath: widgets.yaml
        - name: config-volume
          mountPath: /app/config/kubernetes.yaml
          subPath: kubernetes.yaml
      volumes:
      - name: config-volume
        configMap:
          name: homepage-config
